syntax = "proto2";
package Konata.Core.Packets.Protobuf.Msf;

message oidb_0xed3 {
  message ReqBody {  
    optional uint64 toUin = 1;
    optional uint64 groupCode = 2;
    optional uint32 msgSeq = 3;
    optional uint32 msgRand = 4;
    optional uint64 aioUin = 5;
    optional uint32 nudgeType = 6;
  }

  message RspBody {  }
}

